--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.arthurnespoulous.com">AN</a>.
+    Coded by <a href="https://www.arthurnespoulous.com" target="_blank">AN</a>.
   </div>
 </body>
 </html>
